<resources>
    <!--General App Resources-->
    <string name="app_name">CPS731_Project</string>
    <string name="title">Sum Up</string>

    <!--Main Activity Resources-->
    <string name="start_game">Start Game</string>
    <string name="settings">Settings</string>


    <!--Game Activity Resources-->
    <string name="answer">Target Answer:</string>
    <string name="blank">Blank</string>
    <string name="operator">Operator</string>
    <string name="time_remaining_title">Time Remaining:</string>
    <string name="time_remaining">00:00</string>
    <string name="current_answer">Current Answer:</string>
    <string name="current_score">Current Score:</string>
    <string name="starting_score">0</string>
    <string name="submit_answer">Submit Answer</string>
    <string name="maximum_number">Maximum Number:</string>
    <string name="modifiers">Modifiers:</string>

    <!--Score Activity Resources-->
    <string name="score_title">Your Score:</string>
    <string name="score_earned">0</string>
    <string name="retry_btn">Retry</string>
    <string name="back_to_menu_btn">Main Menu</string>
    <string name="title_activity_score_screen">ScoreScreenActivity</string>

</resources>
